--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -80,3 +80,22 @@
     font-feature-settings: 'rlig' 1, 'calt' 1;
   }
 }
+
+/* 로고 폰트 */
+@import url('https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&display=swap');
+.font-museo {
+  font-family: 'MuseoModerno', sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+}
+
+/* 본문 폰트 */
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff')
+    format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
