--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -82,7 +82,6 @@
 }
 
 /* 로고 폰트 */
-@import url('https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&display=swap');
 .font-museo {
   font-family: 'MuseoModerno', sans-serif;
   font-size: 20px;
@@ -92,10 +91,9 @@
 }
 
 /* 본문 폰트 */
-@font-face {
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css');
+.font-Pretendard {
   font-family: 'Pretendard-Regular';
-  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff')
-    format('woff');
   font-weight: 400;
   font-style: normal;
 }
