--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -100,3 +100,34 @@
   font-weight: 400;
   font-style: normal;
 }
+
+/* fullcalendar 커스텀 */
+
+.fc fc-media-screen fc-direction-ltr fc-theme-standard {
+}
+
+.fc .fc-event {
+  @apply bg-yellow-200 text-gray-800 rounded-lg p-2 shadow-lg border-none;
+}
+
+/* 캘린더 헤더 */
+.fc .fc-toolbar.fc-header-toolbar {
+  @apply m-0;
+}
+
+/*  */
+.fc-toolbar {
+  @apply bg-wellcome-gradient text-white py-2 rounded-t-lg px-3;
+}
+
+.fc .fc-daygrid-day-frame {
+  @apply border border-gray-300 hover:bg-blue-100;
+}
+
+.fc .fc-daygrid-day-frame {
+  @apply border-none;
+}
+
+.fc-scroller {
+  @apply overflow-hidden;
+}
