Style: 헤더 구글 프로필 디자인 수정

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -127,7 +127,7 @@ fullcalendar 커스텀
 /* 년/월 글자 */
 .fc .fc-toolbar-title {
   @apply text-2xl font-bold 
-   max-sm:text-lg;
+  max-lg:text-lg max-sm:text-lg;
 }
 /* today 버튼 */
 .fc .fc-button-primary:disabled {
