Style: reservation 예약버튼 커서 스타일 추가

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -180,7 +180,7 @@ fullcalendar 커스텀
 }
 
 .fc .fc-event:hover {
-  @apply rounded-md border-none  hover:bg-wellcome-magenta transition-colors duration-500;
+  @apply rounded-md border-none  hover:bg-wellcome-magenta transition-colors duration-500 cursor-pointer;
 }
 
 /* 예약 버튼 title */
