--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -90,23 +90,19 @@
   line-height: normal;
 }
 
-/* 본문 폰트 */
-@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css');
-.font-Pretendard {
-  font-family: 'Pretendard Variable', Pretendard, -apple-system,
-    BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI',
-    'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji',
-    'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
+/** 
+폰트
+ **/
 
+/* 중국 폰트 */
 @font-face {
   font-family: 'NotoSansSC';
   src: url('/fonts/NotoSansSC-SemiBold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
+
+/* 폰트 전체 적용 */
 body {
   font-family: 'NotoSansSC', sans-serif;
 }
